# hpop-sdn-plugin

./: .gitignore  README.md  TASK.md  build.sh  package.json  plugin-manifest.json
src/cpp/: CMakeLists.txt  wasm_api.cpp
src/cpp/include/hpop/: atmosphere.h  force_model.h  gravity.h  propagator.h  srp.h  state.h  thirdbody.h  vcm_input.h  vcm_parser.h  vcm_writer.h
src/cpp/include/sds/: ocm_generated.h  vcm_generated.h
src/cpp/src/: atmosphere.cpp  force_model.cpp  gravity.cpp  propagator.cpp  srp.cpp  state.cpp  thirdbody.cpp  vcm_input.cpp  vcm_parser.cpp  vcm_writer.cpp
src/cpp/tests/: test_drag.cpp  test_geopotential.cpp  test_srp.cpp  test_thirdbody.cpp  test_twobody.cpp  test_vcm_input.cpp  test_vcm_parser.cpp  test_wasm_api.cpp
wasm/: index.d.ts  test_node.mjs
wasm/node/: hpop_wasm.js  hpop_wasm.wasm
